[package]
name = "rsx-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
proc-macro2-diagnostics.workspace = true
quote.workspace = true
rstml.workspace = true
syn.workspace = true
convert_case.workspace = true
html-escape.workspace = true
rsx.workspace = true
serde.workspace = true

[dev-dependencies]
rsx.workspace = true
bon.workspace = true
tokio.workspace = true
