[package]
name = "rsxui-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
rsx = { path = "../rsx" }
rsx-macros = { path = "../rsx-macros" }
rsxui = { path = "../rsxui" }
